fix contact page alignments on different font size settings

--- a/style.scss
+++ b/style.scss
@@ -104,6 +104,7 @@ input[type='submit'] {
     border-radius: 0.35rem;
     height: 1.8125rem;
     width: 2.8125rem;
+    white-space: nowrap;
 }
 input[type='text'] {
     border: none;
@@ -799,8 +800,8 @@ footer {
         }
         img {
             position: relative;
-            width: 58.5rem;
-            height: 42.5625rem;
+            width: 41vw;
+            height: 51vh;
             max-width: 40vw;
         }
         input[type='submit'] {
@@ -817,16 +818,17 @@ footer {
         }
         .newsletter {
             position: relative;
-        }
-        .newsletter__form {
-            position: absolute;
-            right: 8.5rem;
-            top: 11.0625rem;
-            h3 {
-                margin: 0;
-            }
-            input[type='submit'] {
-                border-radius: 0 0.35rem 0.35rem 0;
+            .newsletter__form {
+                position: absolute;
+                right: 2.5rem;
+                bottom: 2.5rem;
+                // top: 11vh;
+                h3 {
+                    margin: 0;
+                }
+                input[type='submit'] {
+                    border-radius: 0 0.35rem 0.35rem 0;
+                }
             }
         }
         .contact-us {
